Adding Required Features

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     <script src="js/wikipedia.integration.js"></script>
     <script src="js/auxiliar.ui.js"></script>
     <script src="js/main.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWBr5QHUE5p9bEeWmtJhJ1BwDPDoZW7WU&callback=initMap"
-        async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWBr5QHUE5p9bEeWmtJhJ1BwDPDoZW7WU&callback=initMap" onerror="googleError()" async defer></script>
   </body>
 </html>
